log
Tue 07 May 2024 08:19:47 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
3e7b1cb
Tue 07 May 2024 08:25:47 PM UTC: 
 treemap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
e1dac2b
Tue 07 May 2024 08:28:44 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:73:13: error: ‘else’ without a previous ‘if’
   73 |             else {
      |             ^~~~
Compilation failed
16c4d3b
Tue 07 May 2024 08:30:03 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|7
total_score: 5/70
87df324
Tue 07 May 2024 08:32:50 PM UTC: 
 treemap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  5|7
total_score: 5/70
1312a9d
Tue 07 May 2024 08:36:25 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|6
total_score: 15/70
6b99db9
Tue 07 May 2024 08:37:16 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  8|5
total_score: 15/70
bde9d98
Tue 07 May 2024 08:40:15 PM UTC: 
 treemap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
29aafa9
Tue 07 May 2024 08:48:22 PM UTC: 
 treemap.c | 29 +++++++++++++++++++++++------
 1 file changed, 23 insertions(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:126:15: error: expected expression before ‘:’ token
  126 |         return:
      |               ^
treemap.c:126:15: error: ‘return’ with a value, in function returning void [-Werror=return-type]
treemap.c:94:6: note: declared here
   94 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
90cd961
Tue 07 May 2024 08:52:11 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
9b1245f
Tue 07 May 2024 08:55:49 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  8|5
total_score: 15/70
62a51b4
Tue 07 May 2024 08:58:03 PM UTC: 
 treemap.c | 46 +++++++++++++++++++++++-----------------------
 1 file changed, 23 insertions(+), 23 deletions(-)
 tests:  8|5
total_score: 15/70
ce45b71
Tue 07 May 2024 09:24:45 PM UTC: 
 treemap.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  0|0
f326659
Tue 07 May 2024 09:28:02 PM UTC: 
 treemap.c | 13 ++++++-------
 1 file changed, 6 insertions(+), 7 deletions(-)
 tests:  0|0
9b6ed82
Tue 07 May 2024 09:29:47 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
31f5673
Tue 07 May 2024 09:35:38 PM UTC: 
 treemap.c | 44 ++------------------------------------------
 1 file changed, 2 insertions(+), 42 deletions(-)
 tests:  15|4
total_score: 25/70
3630079
Tue 07 May 2024 09:36:08 PM UTC: 
 treemap.c | 43 ++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 42 insertions(+), 1 deletion(-)
 tests:  0|0
3e11949
Tue 07 May 2024 09:36:27 PM UTC: 
 treemap.c | 44 +-------------------------------------------
 1 file changed, 1 insertion(+), 43 deletions(-)
 tests:  15|4
total_score: 25/70
d6fe643
Tue 07 May 2024 09:38:57 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
07eeb05
